force-app/main/default/objects/Child_Case__c/Child_Case__c.object-meta.xml
<CustomObject>
    <label>Child Case</label>
    <nameField>
        <label>Child Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>