force-app/main/default/objects/Child_Case__c/fields/Case_severity__c.field-meta.xml
<CustomField>
    <fullName>Case_severity__c</fullName>
    <label>Case severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>