force-app/main/default/objects/Child_Case__c/fields/Expected_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Last_Date__c</fullName>
    <label>Expected Last Date</label>
    <type>Date</type>
</CustomField>