force-app/main/default/objects/Child_Case__c/fields/Immediate_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Action Needed</label>
    <type>Checkbox</type>
</CustomField>