force-app/main/default/objects/Child_Case__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Child Cases</relationshipLabel>
    <relationshipName>Child_Cases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>